<resources>
    <string name="app_name">crunchyDroll</string>
    <string name="nombreApp">CrunchyDroll</string>
    <string name="miNombre">Pablo Salcedo</string>
    <string name="descripcion1">Inicia una nueva aventura con CrunchyDroll y descubre una nueva forma de ver el mundo</string>
    <string name="button1">Comienza</string>
    <string name="registrar">Regístrate</string>
    <string name="descripcion2">La aventura está por iniciar, por favor inicia sesión</string>
    <string name="button2">Ingresar</string>
    <string name="recuperar">Recupera Tu Contraseña</string>
    <string name="google">Ingresa con Google</string>
    <string name="notienes">No tienes cuenta?</string>
    <string name="registrotext">Para continuar, deberás registrarte con tus datos personales</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="email_example">email@example.com</string>
    <string name="password">contraseña</string>
    <string name="confirm_password">confirmar contraseña</string>
    <string name="number">Celular</string>
    <string name="yacuenta">Ya tienes una cuenta?</string>
    <string name="login">Iniciar Sesión</string>
    <string name="terminosYcondiciones">Aceptar Términos y Condiciones</string>
    <string name="recuperarcontraseña">Para recuperar tu contraseña, por favor ingresa tu correo electrónico. Te llegará un código de verificación</string>
    <string name="enviar">Enviar</string>
    <string name="volver">Volver</string>
    <string name="nombre">Pablo Salcedo</string>
    <string name="telefono">+57 301 1234567</string>
    <string name="correo">jpsalcedo@ucompensar.edu.co</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="confirmPassword">Confirme su contrasña</string>
    <string name="inicio">inicio</string>
    <string name="perfil">perfil</string>
    <string name="configuracion">configuracion</string>
    <string name="cerrar_sesion">cerrar sesion</string>
</resources>