<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="201dp"
            android:layout_height="187dp"
            android:layout_marginTop="40dp"
            app:srcCompat="@mipmap/ic_launcher_foreground" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/nombreApp"
            android:textColor="@color/white2"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/raleway_semibold"
            android:text="@string/descripcion1"
            android:textAlignment="center"
            android:textColor="@color/white2"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="267dp"
            android:layout_height="70dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/white2"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/button1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/registrar"
            android:textColor="@color/orange"
            android:textSize="18sp" />

    </LinearLayout>
</ScrollView>
