<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal">

        <!-- Logo e imagen de app -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="101dp"
                android:layout_height="87dp"
                android:src="@mipmap/ic_launcher_foreground" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombreApp"
                android:fontFamily="@font/raleway_bold"
                android:textSize="34sp"
                android:textColor="@color/white2"
                android:layout_marginStart="16dp" />
        </LinearLayout>

        <!-- Texto de Registro -->
        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrotext"
            android:textAlignment="center"
            android:textColor="@color/white2"
            android:textStyle="italic"
            android:textSize="16sp"
            android:layout_marginTop="12dp"
            android:fontFamily="serif" />

        <!-- Nombre -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/editTextText3"
                android:layout_width="0dp"
                android:layout_height="49dp"
                android:layout_weight="1"
                android:hint="@string/nombres"
                android:inputType="text"
                android:background="@drawable/rounded_edittext"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <!-- Apellido -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/editTextText4"
                android:layout_width="0dp"
                android:layout_height="49dp"
                android:layout_weight="1"
                android:hint="@string/apellidos"
                android:inputType="text"
                android:background="@drawable/rounded_edittext"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <!-- Teléfono -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="0dp"
                android:layout_height="49dp"
                android:layout_weight="1"
                android:hint="@string/number"
                android:inputType="phone"
                android:background="@drawable/rounded_edittext"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <!-- Email -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="0dp"
                android:layout_height="49dp"
                android:layout_weight="1"
                android:hint="@string/email_example"
                android:inputType="textEmailAddress"
                android:background="@drawable/rounded_edittext"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <!-- Contraseña -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="0dp"
                android:layout_height="49dp"
                android:layout_weight="1"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:background="@drawable/rounded_edittext"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey" />
        </LinearLayout>

        <!-- Confirmar Contraseña -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/editTextTextPassword2"
                android:layout_width="0dp"
                android:layout_height="49dp"
                android:layout_weight="1"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:background="@drawable/rounded_edittext"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey" />
        </LinearLayout>

        <!-- CheckBox -->
        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/terminosYcondiciones"
            android:textColor="@color/white2"
            android:textSize="16sp" />

        <!-- Botón de Registrar -->
        <Button
            android:id="@+id/button2"
            android:layout_width="190dp"
            android:layout_height="55dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/white2"
            android:text="@string/registrar"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:fontFamily="serif" />

        <!-- Texto: ¿Ya tienes cuenta? -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yacuenta"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/orange"
                android:layout_marginStart="8dp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
