<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="35dp">

        <ImageView
            android:id="@+id/photoUser"
            android:layout_width="match_parent"
            android:layout_height="237dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.092"
            app:srcCompat="@drawable/perfil" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/white2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.499" />

        <EditText
            android:id="@+id/editFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/nombres"
            android:textColor="@color/black"
            android:background="@drawable/rounded_edittext"
            android:padding="12dp"/>

        <EditText
            android:id="@+id/editLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apellidos"
            android:textColor="@color/black"
            android:background="@drawable/rounded_edittext"
            android:padding="12dp"
            android:layout_marginTop="12dp"/>

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_example"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:background="@drawable/rounded_edittext"
            android:padding="12dp"
            android:layout_marginTop="12dp"/>

        <EditText
            android:id="@+id/editPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number"
            android:inputType="phone"
            android:textColor="@color/black"
            android:background="@drawable/rounded_edittext"
            android:padding="12dp"
            android:layout_marginTop="12dp"/>

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:background="@drawable/rounded_edittext"
            android:padding="12dp"
            android:layout_marginTop="13dp"/>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardar"
            android:textColor="@color/black"
            android:backgroundTint="@color/orange"
            android:layout_marginTop="24dp"/>

        <TextView
            android:id="@+id/returnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volver"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</ScrollView>
